add claim example
Signed-off-by: Steven Borrelli <steve@borrelli.org>

--- a/2-function-go-templating/apis/xrd.yaml
+++ b/2-function-go-templating/apis/xrd.yaml
@@ -9,6 +9,11 @@ spec:
     listKind: XIAMSelfTrustRoleList
     plural: xiamselftrustroles
     singular: xiamselftrustrole
+  claimNames:
+    kind: IAMSelfTrustRole
+    listKind: IAMSelfTrustRoleList
+    plural: iamselftrustroles
+    singular: iamselftrustrole
   versions:
     - name: v1alpha1
       served: true
