--- a/2-function-go-templating/example/role-xr.yaml
+++ b/2-function-go-templating/example/role-xr.yaml
@@ -1,5 +1,5 @@
 apiVersion: example.crossplane.io/v1alpha1
-kind: IAMSelfTrustRole
+kind: XIAMSelfTrustRole
 metadata:
   name: self-trust-test
 spec:
