--- a/0-managed-resources/provider.yaml
+++ b/0-managed-resources/provider.yaml
@@ -6,4 +6,11 @@ kind: Provider
 metadata:
   name: upbound-provider-aws-s3
 spec:
-  package: xpkg.upbound.io/upbound/provider-aws-s3:v1.1.1
+  package: xpkg.upbound.io/upbound/provider-aws-s3:v1.3.1
+---
+apiVersion: pkg.crossplane.io/v1
+kind: Provider
+metadata:
+  name: upbound-provider-family-aws
+spec:
+  package: xpkg.upbound.io/upbound/provider-family-aws:v1.3.1
